add css backgrounds and page layout

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
     <link rel="stylesheet" href="./resources/css/style.css">
     <title>Broadway Design</title>
   </head>
   <body>
+
     <header>
       <h1>Broadway Design</h1>
       <a href="#">Home</a><br>
@@ -29,7 +28,7 @@
         <p>We put everythig we have into our work.</p>
       </div>
 
-      <div class= "design">
+      <div class="design">
         <h2>Designed in New York</h2>
       </div>
 
@@ -45,16 +44,14 @@
       </div>
     </section>
 
-    <footer>
-      <div id="copyright">© Broadway 2017</div>
-      <div id= "links">
+    <div class="footer">
+      <p>&copy; Broadway 2017
       <a href="#">Home</a>
       <a href="#">About</a>
       <a href="#">Work</a>
       <a href="#">Team</a>
-      <a href="#">Contact</a>
-      </div>
-    </footer>
+      <a href="#">Contact</a></p>
+    </div>
 
   </body>
 </html>
