--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
     <header>
       <h1>Broadway Design</h1>
-      <a href="#">Home</a><br>
-      <a href="#">About</a><br>
-      <a href="#">Work</a><br>
-      <a href="#">Team</a><br>
-      <a href="#">Contact</a><br>
+      <a class="link" href="#">Home</a><br>
+      <a class="link" href="#">About</a><br>
+      <a class="link" href="#">Work</a><br>
+      <a class="link" href="#">Team</a><br>
+      <a class="link" href="#">Contact</a><br>
     </header>
 
     <section>
@@ -46,11 +46,11 @@
 
     <div class="footer">
       <p>&copy; Broadway 2017
-      <a href="#">Home</a>
-      <a href="#">About</a>
-      <a href="#">Work</a>
-      <a href="#">Team</a>
-      <a href="#">Contact</a></p>
+      <a class="link" href="#">Home</a>
+      <a class="link" href="#">About</a>
+      <a class="link" href="#">Work</a>
+      <a class="link" href="#">Team</a>
+      <a class="link" href="#">Contact</a></p>
     </div>
 
   </body>
